syntax = "proto3";

import "./common.proto";
package user;

message pUser {
  string id = 1;
  string email = 2;
  string password = 3;
  string username = 4;
  string profilePicture = 5;
}

message pUsersList {
  repeated pUser data = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

service UsersService {
  rpc find(common.pPaginationRequest) returns (pUsersList) {}
  rpc findOne(pUserById) returns (pUser) {}
  rpc findOneByEmail(pUserByEmail) returns (pUser) {}
  rpc create(pCreateUserDto) returns (pUser) {}
}

message pCreateUserDto {
  string email = 1;
  string username = 2;
  string password = 3;
}

message pUserById { string id = 1; }

message pUserByEmail { string email = 1; }
